# regex-stepper

./: .gitignore  LICENSE  README.md  pyproject.toml
regex_stepper/: __init__.py  app.py  benchmarker.py  cli.py  engine.py  explainer.py  tokenizer.py
