[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "regex-stepper"
version = "1.0.0"
description = "TUI debugger that lets you step through regex execution frame-by-frame"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "regex-stepper contributors"}]
keywords = ["regex", "debugger", "tui", "step", "visualizer"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Text Processing",
]
dependencies = [
    "click>=8.0",
    "textual>=0.40.0",
    "rich>=13.0",
]

[project.scripts]
regex-stepper = "regex_stepper.cli:main"

[tool.setuptools.packages.find]
include = ["regex_stepper*"]
